--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="containers min-h-screen bg-[url('image/image.png')] bg-center bg-cover relative">
+    <div class="containers min-h-screen bg-[url('image/imagee.png')] bg-center bg-cover relative">
         <nav class="flex items-center px-28 py-5">
             <img src="image/logo.png" class="w-40 cursor-pointer">
             <ul class="flex-1 text-center">
